--- a/templates/header.html
+++ b/templates/header.html
@@ -51,8 +51,17 @@
                             <a href="{% url 'stock_list' %}"><i class="fa fa-list"></i> <span class="nav-label">Stock List</span></a>
                         </li>
 
+                        <li class="createsurvey {{ isact_addnewstock }}">
+                            <a href="{% url 'add_new_stock' %}"><i class="fa fa-plus-circle"></i> <span class="nav-label">Add New Stock</span></a>
+                        </li>
+
+
                         <li class="createsurvey {{ isact_sellslist }}">
                             <a href="{% url 'sell_list' %}"><i class="fa fa-list"></i> <span class="nav-label">Sells List</span></a>
+                        </li>
+
+                        <li class="createsurvey {{ isact_addnewsells }}">
+                            <a href="{% url 'add_new_sells' %}"><i class="fa fa-list"></i> <span class="nav-label">Add New Sells</span></a>
                         </li>
 
 
