--- a/templates/sell/sell_list.html
+++ b/templates/sell/sell_list.html
@@ -26,10 +26,7 @@
                             <div class="col-12">
                                 <div class="col-lg-offset-6">
 
-                                    <a class="mr-2 btn btn-primary btn-sm float-right text-white" data-toggle="modal"
-                                       data-target="#exampleModal">
-                                        <i class="fa fa-plus-circle"></i> Add New Sell
-                                    </a>
+                                    <a class="mr-2 btn btn-primary btn-sm float-right text-white" href="{% url 'add_new_sells' %}" ><i class="fa fa-plus-circle"></i> Add New Sell</a>
 
                                 </div>
                             </div>
@@ -176,59 +173,6 @@
                                 </tbody>
                             </table>
                         </div>
-                        <form action="{% url 'add_new_stock' %}" method="post">
-                            {% csrf_token %}
-                            <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                                 aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Add New Stock</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <div class="row">
-                                                <div class="col-lg-12">
-                                                    <div class="form-group">
-                                                        <label class="form-control-label">Product Name&nbsp;<span
-                                                                style="color:red;">*</span></label>
-                                                        <input type="text" name="product_name" class="form-control"
-                                                               required>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-lg-12">
-                                                    <div class="form-group">
-                                                        <label class="form-control-label">Quantity&nbsp;<span
-                                                                style="color:red;">*</span></label>
-                                                        <input type="number" name="quantity" class="form-control"
-                                                               required>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-lg-12">
-                                                    <div class="form-group">
-                                                        <label class="form-control-label">Unit Price&nbsp;<span
-                                                                style="color:red;">*</span></label>
-                                                        <input type="number" name="unit_price" class="form-control"
-                                                               required>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
-                                            </button>
-                                            <button type="submit" class="btn btn-primary">Save changes</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -239,7 +183,11 @@
 {% include 'footer.html' %}
 <script>
     $(document).ready(function (){
-         $('#list').DataTable();
+         $('#list').DataTable(
+             {
+                "ordering": false
+            }
+         );
     })
 </script>
 
