--- a/templates/stock/stock_list.html
+++ b/templates/stock/stock_list.html
@@ -26,7 +26,7 @@
                             <div class="col-12">
                                 <div class="col-lg-offset-6">
 
-                                    <a class="mr-2 btn btn-primary btn-sm float-right text-white" data-toggle="modal" data-target="#exampleModal">
+                                    <a class="mr-2 btn btn-primary btn-sm float-right text-white" href="{% url 'add_new_stock' %}">
                                         <i class="fa fa-plus-circle"></i> Add New Stock
                                     </a>
 
