update sell view

--- a/templates/sell/sell_list.html
+++ b/templates/sell/sell_list.html
@@ -78,11 +78,12 @@
 
                                     <td style="width: 10%">
                                         <div class="btn-group">
-
+                                            <a href="{% url 'sell_details' id=obj.id %}" style="margin-right: 5px;"><button class="btn btn-primary fa fa-eye"></button>
+                                            </a>
                                             <a href="" style="margin-right: 5px;" data-toggle="modal" data-target="#surve_update{{obj.id}}"><button class="btn btn-info fa fa-edit"></button>
                                             </a>
-                                            <a href="" data-toggle="modal" id="{{s.id}}"
-                                               data-target="#surve_delete{{obj.id}}">
+
+                                            <a href="" data-toggle="modal" id="{{s.id}}" data-target="#surve_delete{{obj.id}}">
                                                 <button class="btn btn-danger fa fa-trash"></button>
                                             </a>
 
