--- a/templates/stock/stock_list.html
+++ b/templates/stock/stock_list.html
@@ -231,6 +231,10 @@
 
 <script>
     $(document).ready(function (){
-         $('#surveyorList').DataTable();
+         $('#surveyorList').DataTable(
+             {
+                "ordering": false
+            }
+         );
     })
 </script>
