--- a/templates/header.html
+++ b/templates/header.html
@@ -2,28 +2,25 @@
 <html>
 
 <head>
-{% load static %}
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <title>
+        {% block title %}
+            Admin Dashboard | Firuz Mortuz Hospital
+        {% endblock %}
+    </title>
+    <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet">
     <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
-{#    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.23/datatables.min.css"/>#}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.23/datatables.min.css"/>
     <link href="{% static 'css/animate.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
-
-
-{#    <link rel="stylesheet" type="text/css" href="{% static 'css/datatables.min.css' %}"/>#}
-{#    <link rel="stylesheet" type="text/css" href="{% static 'css/buttons.dataTables.min.css' %}"/>#}
-{#    <link rel="stylesheet" type="text/css" href="{% static 'css/jquery.dataTables.min.css' %}"/>#}
-
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jq-3.3.1/jszip-2.5.0/dt-1.10.24/b-1.7.0/b-colvis-1.7.0/b-html5-1.7.0/b-print-1.7.0/datatables.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css"/>
-
-    <link rel="shortcut icon" href="{% static 'img/oxdoraitec.png' %}" />
-
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <link rel="shortcut icon" href="{% static 'img/oxdoraitec.png' %}"/>
+    {% block stylesheet %}
+    {% endblock %}
 </head>
 
  <nav class="navbar-default navbar-static-side" role="navigation">
@@ -31,13 +28,13 @@
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
                         <div class="dropdown profile-element left-profile">
-                            <img alt="image" class="" src="{% static 'img/oxdora-analytics-logo.png' %}" style="height:150px;width:150px;"/>
+                            <img alt="image" class="" src="{% static 'img/rising_aisa_8.jpg' %}" style="height:150px;width:150px;"/>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                 <span class="block m-t-xs font-bold profile-title" style="padding-left:20px">{{ request.user }}</span>
                             </a>
                         </div>
                     </li>
-                    {% if request.user.is_superuser %}
+                    {% if request.user.user_info.first.role == 1 %}
                         <li class="dashboard {{ isact_home }}" >
                             <a href="{% url 'admin_home' %}"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
                         </li>
@@ -64,8 +61,40 @@
                             <a href="{% url 'add_new_sells' %}"><i class="fa fa-list"></i> <span class="nav-label">Add New Sells</span></a>
                         </li>
 
+                        <li class="createsurvey {{ isact_notifications }}">
+                            <a href="{% url 'notification_list' %}"><i class="fa fa-bell"></i> <span class="nav-label">Notifications</span></a>
+                        </li>
+
 
                     {% endif %}
+                    {% if request.user.user_info.first.role == 2 %}
+                        <li class="dashboard {{ isact_home }}" >
+                            <a href="{% url 'admin_home' %}"><i class="fa fa-home"></i> <span class="nav-label">Home</span></a>
+                        </li>
+                        <li class="surveyorlist {{ isact_surveyorlist }}">
+                            <a href="{% url 'surveyor_list' filter='None' %}"><i class="fa fa-list"></i> <span class="nav-label">All User</span></a>
+                        </li>
+
+                        <li class="createsurvey {{ isact_stocklist }}">
+                            <a href="{% url 'stock_list' %}"><i class="fa fa-list"></i> <span class="nav-label">Stock List</span></a>
+                        </li>
+
+                        <li class="createsurvey {{ isact_addnewstock }}">
+                            <a href="{% url 'add_new_stock' %}"><i class="fa fa-plus-circle"></i> <span class="nav-label">Add New Stock</span></a>
+                        </li>
+
+
+                        <li class="createsurvey {{ isact_sellslist }}">
+                            <a href="{% url 'sell_list' %}"><i class="fa fa-list"></i> <span class="nav-label">Sells List</span></a>
+                        </li>
+
+                        <li class="createsurvey {{ isact_addnewsells }}">
+                            <a href="{% url 'add_new_sells' %}"><i class="fa fa-list"></i> <span class="nav-label">Add New Sells</span></a>
+                        </li>
+
+
+                    {% endif %}
+
 
 
 
@@ -78,7 +107,35 @@
         </nav>
 
 
+<body>
 <div id="page-wrapper" class="gray-bg">
-<div class="row border-bottom ">
-
+    <div class="row border-bottom ">
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
 </div>
+
+
+<!-- Mainly scripts -->
+
+
+<script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.23/datatables.min.js"></script>
+
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/plugins/metisMenu/jquery.metisMenu.js' %}"></script>
+<script src="{% static 'js/plugins/slimscroll/jquery.slimscroll.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<!-- Custom and plugin javascript -->
+<script src="{% static 'js/inspinia.js' %}"></script>
+{% block script %}
+{% endblock %}
+<script src="{% static 'js/plugins/pace/pace.min.js' %}"></script>
+
+
+</body>
+
+</html>
